# IFCC

./: BuildIfcSwap.bat  BuildIfcSwap.sh  CMakeLists.txt  IFCC.cpp  README.md
include/: IfcClass.hpp  IfcFile.hpp
src/: IFCC.cpp  IfcClass.cpp  IfcFile.cpp
supportApps/IfcSwap/: package-lock.json  package.json  tsconfig.json
supportApps/IfcSwap/src/: IfcSwap.ts
